[package]
name = "craterfinder"
version = "0.1.0"
edition = "2021"
description = "Craterfinder is a command-line Minesweeper game written in Rust"
license = "MIT"
documentation = "https://docs.rs/craterfinder"
repository = "https://github.com/sunray-ley/craterfinder"

[dependencies]
ferris-says = "0.2"
